Bug 66743 - Rtf files don't look right
Summary: Rtf files don't look right
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta2
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.2.0 target:4.1.3
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-09 16:21 UTC by Krzysztof A. Sobiecki
Modified: 2013-09-30 13:47 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Krzysztof A. Sobiecki 2013-07-09 16:21:50 UTC
Rtf files available on http://bip.ms.gov.pl/pl/rejestry-i-ewidencje/okrajowy-rejestr-sadowy/formularze-wnioskow-wykorzystywanych-w-krs/ doesn't work properly, just take a look at pdf counterpart. What can be done?
Comment 1 Jorendc 2013-07-11 13:28:17 UTC
Thanks for reporting!

I can reproduce this behavior using Mac OSX 10.8.4 with LibreOffice 4.1.0.2.

(In reply to comment #0)
> What can be done?
Split the bug reports. The file I tested (rtf: http://bip.ms.gov.pl/Data/Files/_public/bip/krs/formularze/krs_form_d1.rtf pdf: http://bip.ms.gov.pl/Data/Files/_public/bip/krs/formularze/krs_form_d1.pdf) contains multiple bugs: (1) image truncated (top left on the first page) (2) wrong/weird bullet icons, (3) table rendered incorrectly, (4) ...?
Every bug report should contain one bug, so please create new bug reports for it.

Kind regards,
Joren

PS: you can add me to 'CC' on the bug report.
Comment 2 Miklos Vajna 2013-09-22 10:31:52 UTC
Truncated image seems not to be a filter bug, when the document is first opened, it's OK, then if you set scale to something smaller (e.g. 100%), then you get the problem -> sounds like a non-filter problem, best to open a separate issue for that.

From the remaining problems, the best obvious to me is that the table background is darker than necessary (should be #d8d8d8, is #7f7f7f), I'll look into that.
Comment 3 Commit Notification 2013-09-23 08:48:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=21e07d473d1ce995ca0f1d0ac0edb03e75a7dfc1

fdo#66743 fix import of some RTF_CLSHDNG values



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Miklos Vajna 2013-09-30 11:01:08 UTC
-4-1 review: https://gerrit.libreoffice.org/6091
Comment 5 Commit Notification 2013-09-30 13:47:10 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bbf96f4feb309f94741e76bd92ec06f25d3e9734&h=libreoffice-4-1

fdo#66743 fix import of some RTF_CLSHDNG values


It will be available in LibreOffice 4.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.