fdo#66743 fix import of some RTF_CLSHDNG values

This should be in sync with model.xml, got broken when the somewhat
random values got fixed to be the same as the ones which are in the ww8
spec.

(Regression from 26d40686128e70916a636e20f5ccc5763bbb6cc8.)

Change-Id: Id62047e0b2d5d8402a7c8bce95de487afe627e32